// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ComposerRegion golden frames with text (stable plain-text frame) 1`] = `
"────────────────────────────────────────
> hello
────────────────────────────────────────
Enter send · /model · /exit"
`;

exports[`ComposerRegion golden frames busy (stable plain-text frame) 1`] = `
"────────────────────────────────────────
> hello
────────────────────────────────────────
Running…"
`;
